Fixed footer alignments. #144.

--- a/assets/css/design-manual.css
+++ b/assets/css/design-manual.css
@@ -618,9 +618,6 @@ ul {
   margin: 0 auto;
   position: relative;
   clear: both;
-  display: table;
-  height: 100%;
-  width: 100%;
 }
 .lt-ie8 .wrapper {
   *zoom: 1;
@@ -11887,9 +11884,6 @@ html {
   margin: 0 auto;
   position: relative;
   clear: both;
-  display: table;
-  height: 100%;
-  width: 100%;
 }
 .lt-ie8 .wrap {
   *zoom: 1;
@@ -12992,9 +12986,6 @@ ul.list_links-minicons li {
   margin: 0 auto;
   position: relative;
   clear: both;
-  display: table;
-  height: 100%;
-  width: 100%;
   margin-top: 20px;
   margin-bottom: 40px;
 }
@@ -13049,23 +13040,14 @@ ul.list_links-minicons li {
    CFPB Design Manual
    Footer
    ========================================================================== */
-/* display content wrap as table for sticky footer */
-.wrapper {
-  display: table;
-  height: 100%;
-  width: 100%;
-}
 .footer {
-  display: table-row;
-  /* for sticky footer */
-  height: 1px;
-  /* for sticky footer */
+  padding: 2em 0;
   border-top: 2px solid #babbbd;
   background: #f1f2f2;
   width: 100%;
 }
 .footer h4 {
-  margin: 1.5em 0 .5em .25em;
+  margin-top: 0;
   font-size: 16px;
   line-height: 1.5em;
   text-transform: uppercase;
@@ -13083,52 +13065,43 @@ ul.list_links-minicons li {
 .footer a:hover {
   border-bottom: 1px dotted #0072ce;
 }
-.footer .footer-container {
-  padding: 2em 0;
-}
 .footer .footer-links ul {
   list-style: none;
-  margin: 1em .5em 1em .25em;
+  padding-left: 0;
+  margin-top: 0;
 }
 .footer .footer-section {
   display: inline-block;
   vertical-align: top;
-  margin-right: .5em;
-  margin-left: .5em;
 }
 .footer .footer-links {
   float: left;
+  width: 25%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0 15px;
 }
 .footer .footer-oss {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 75%;
   float: right;
+  padding: 0 15px;
 }
 /* Media Queries
    ========================================================================== */
 @media only screen and (min-width: 37.5em) {
-  .footer h4 {
-    margin: 1em 0 .5em 0;
-  }
   .footer p {
     margin: .75em 0;
-  }
-  .footer .footer-links {
-    margin: 0 .5em .5em 1em;
   }
   .footer .footer-links ul,
   .footer li {
     margin-left: 0;
   }
-  .footer .footer-oss {
-    width: 60%;
-    float: right;
-  }
 }
 /* TABLET/NETBOOK 744px */
-@media only screen and (min-width: 46.5em) {
-  .footer .footer-oss {
-    width: 67%;
-  }
-}
 /* Mobile portrait (320px) */
 /* Mobile landscape (480px) */
 /* Small tablet (600px) */
